--- a/webDevelopmentSite/client/package.json
+++ b/webDevelopmentSite/client/package.json
@@ -15,7 +15,8 @@
     "express": "^4.21.2",
     "nodemailer": "^6.9.16",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
