--- a/react-bootstrap/project-3/frontend/package.json
+++ b/react-bootstrap/project-3/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predev": "npm install react-router-dom",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -13,7 +14,8 @@
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
