--- a/react-bootstrap/project-3/frontend/package.json
+++ b/react-bootstrap/project-3/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predev": "npm install react-router-dom",
+    "predev": "npm install react-router-dom emailjs-com",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
